Added JWT
Added JWT auth to meat and produce routes.
Added swagger tags to meat produce and user routes
Added JWT to swagger doc
